# text-knnassifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  pyproject.toml  search.js  textknnassifier.html
.github/: dependabot.yaml
.github/workflows/: docs.yaml  docs.yml  pypi.yaml  test.yaml
docs/pdoc-theme/: syntax-highlighting.css  theme.css
src/textknnassifier/: classifier.py  compressor.py
tests/unit/: test_classifier.py  test_compressor.py
textknnassifier/: classifier.html  compressor.html
